// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState component should match snapshot with variant "barrier-logged" 1`] = `
<div>
  <section
    class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
  >
    <img
      alt="Para realizar esta acción es necesario que tengas una suscripción."
      class="image flex --fill"
      decoding="async"
      fetchpriority="low"
      height="110"
      loading="lazy"
      src="undefined/pf/resources/images/barrier-state.webp"
      width="147"
    />
    <div
      class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
    >
      <p
        class="text prumo prumo-semibold text-24 text-28_md text-32_lg"
      >
        ¡Exclusivo suscriptor!
      </p>
      <p
        class="text text-16 text-light-600"
      >
        Para realizar esta acción es necesario que tengas una suscripción.
      </p>
    </div>
    <button
      class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-subscription-positive text-light-800 bg-accent-lechuga__hover px-16 py-12"
      data-variant="accent"
    >
      Suscribite
    </button>
  </section>
</div>
`;

exports[`EmptyState component should match snapshot with variant "barrier-unlogged 1`] = `
<div>
  <section
    class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
  >
    <img
      alt="Para realizar esta acción es necesario que inicies sesión."
      class="image flex --fill"
      decoding="async"
      fetchpriority="low"
      height="110"
      loading="lazy"
      src="undefined/pf/resources/images/barrier-state.webp"
      width="147"
    />
    <div
      class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
    >
      <p
        class="text prumo prumo-semibold text-24 text-28_md text-32_lg"
      >
        ¡Exclusivo suscriptor!
      </p>
      <p
        class="text text-16 text-light-600"
      >
        Para realizar esta acción es necesario que inicies sesión.
      </p>
    </div>
    <button
      class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-primary-positive text-light-1 bg-accent-lechuga__hover px-16 py-12"
      data-variant="primary"
    >
      Inicia sesión
    </button>
  </section>
</div>
`;

exports[`EmptyState component should match snapshot with variant "empty-state 1`] = `
<div>
  <section
    class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
  >
    <img
      alt="¡Aún no hay nada por acá!"
      class="image flex --fill"
      decoding="async"
      fetchpriority="low"
      height="152"
      loading="lazy"
      src="undefined/pf/resources/images/empty-state-recetario.png"
      width="147"
    />
    <div
      class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
    >
      <p
        class="text prumo prumo-semibold text-24 text-28_md text-32_lg"
      >
        ¡Aún no hay nada por acá!
      </p>
      <p
        class="text text-16 text-light-600"
      >
        <span>
          Presioná el botón
          <i
            class="icon vertical-align-middle mx-4 --icon-16"
          >
            <mock-icon
              critical="true"
              name="bookmark"
            />
          </i>
          en la receta para agregar los ingredientes que necesitas y ¡Listo!
        </span>
      </p>
    </div>
  </section>
</div>
`;
